methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:1: error: method run overrides nothing.
Note: the super classes of class MethodsPicture contain the following, non final members named run:
def run(): Unit
override def run(c:Color) {
             ^